<resources>
    <string name="app_name">Relief Donation</string>
    <string name="google_map_api">AIzaSyA14vuMv60UpmkIfd6H53VnmFk6cV1WtTI</string>
    <string name="google_place_api">AIzaSyDNzoRTXpXdxdW7U4GLlnmKSZzGVHp6NJk</string>

    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="number_of_amount">Number Of Amount</string>
    <string name="enter_donate_date">Enter Donate Date</string>
    <string name="donate_location">Donate Location</string>
    <string name="submit">Submit</string>

    <!-- Radio  start -->
    <string name="all">All</string>
    <string name="month">Month</string>
    <string name="week">Week</string>
    <string name="day">Day</string>
    <string name="donate_info">Donate Info</string>
    <string name="search_location">Search Location</string>
    <string name="directions">directions</string>
    <string name="google_map">google_map</string>

    <!-- Radio  End -->

    <array name="effort">
        <item>Choose Your Donated Item</item>
        <item>Food</item>
        <item>Hygiene</item>
        <item>PPE</item>
        <item>Medicine</item>
        <item>Money</item>
        <item>Other</item>
    </array>

    <array name="amount">
        <item>Pcs</item>
        <item>Kg</item>
        <item>Taka</item>
    </array>
</resources>
