<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/AppThemeMaterial"
    tools:context=".DonateInfoActivity">

    <EditText
        android:id="@+id/edPhn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/enter_phone_number"
        android:inputType="phone" />

    <Spinner
        android:id="@+id/spinnerEffort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:entries="@array/effort" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/number_of_amount"
            android:inputType="number" />

        <Spinner
            android:id="@+id/spinnerAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/amount" />




    </LinearLayout>

    <EditText
        android:id="@+id/edDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/enter_donate_date" />


    <Button
        android:id="@+id/btn_location_pick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/donate_location" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/submit" />
</LinearLayout>